
syntax = "proto3";

package promotion_app_package;

service promotion {
    rpc get_promotion (msg) returns (status) {}

}

message msg {

    string customerId = 1;
    string categoryId = 2 ;
    string serviceId = 3 ;
    string productId = 4 ;
}

message status {
    int32  amount = 1;

}

